--- a/klein2012/main.tex
+++ b/klein2012/main.tex
@@ -251,7 +251,7 @@ Finalement, afin d'entrer dans le cadre où les seules données qui nous sont ac
 %%%
 \subsection{Description de la tâche}
 %%%
-Le problème du pendule inversé à maintenir en équilibre vertical un pendule à un degré de liberté. il s'agit d'un problème classique en apprentissage par renforcement ({\it Reinforcement Learning, RL}). Pour jouer le rôle de notre expert, nous utilisons d'ailleurs la politique trouvée par LSPI, un algorithme de RL décrit par \citet{lagoudakis2003least}. Les différents réglages utilisés, de la valeur de la masse du pendule codée dans notre simulateur jusqu'au choix des fonctions de bases $\phi : S\times A \rightarrow \mathbb{R}^k$ et $\psi : S \rightarrow \mathbb{R}^p$ sont conformes à ce qui est donné dans cette publication.\\
+Le problème du pendule inversé consiste à maintenir en équilibre vertical un pendule à un degré de liberté. Il s'agit d'un problème classique en apprentissage par renforcement. Pour jouer le rôle de notre expert, nous utilisons d'ailleurs la politique trouvée par LSPI, un algorithme de RL décrit par \citet{lagoudakis2003least}. Les différents réglages utilisés, de la valeur de la masse du pendule codée dans notre simulateur jusqu'au choix des fonctions de bases $\phi : S\times A \rightarrow \mathbb{R}^k$ et $\psi : S \rightarrow \mathbb{R}^p$ sont conformes à ce qui est donné dans cette publication.\\
 
 La politique ainsi trouvée parvient systématiquement à maintenir le pendule en équlibre durant 3000 pas de temps. Ces derniers ayant une valeur d'un dixième de seconde, cela signifie que nous interrompons l'expert après 5 minutes de contrôle sans chute du pendule.\\
 
@@ -273,7 +273,7 @@ En effet, comme cela a été montré dans \citep{klein2011batch}, à moins de fo
 \begin{minipage}[t]{.4\linewidth}
     \begin{center}
        \includegraphics[width=\textwidth]{LAFEM_Exp3_lafem_R.pdf}
-       \caption{Récompense trouvée par LAFEM}
+       \caption{Récompense trouvée par LAFEM, en vert les positions occupées par l'expert.}
        \label{lafemR.fig}
     \end{center}
 \end{minipage}\\
